[gd_scene load_steps=33 format=3 uid="uid://dewp4wiarhp52"]

[ext_resource type="Script" path="res://scripts/UIHandler.gd" id="1_hbd8v"]
[ext_resource type="Texture2D" uid="uid://dqphg4dhy7igm" path="res://sprites/background sprites/BACKGROUND_stue100%.png" id="2_bil64"]
[ext_resource type="ButtonGroup" uid="uid://cq15tv1x3rmhk" path="res://sprites/button sprites/button_group_time_scale.tres" id="2_sj08s"]
[ext_resource type="Texture2D" uid="uid://dbgpl28k4168i" path="res://sprites/background sprites/BACKGROUND_stue75%.png" id="3_8do6h"]
[ext_resource type="Texture2D" uid="uid://byrs1ycgrd0t1" path="res://sprites/patient character-models/TORSO_anatomy.png" id="3_fka0q"]
[ext_resource type="Texture2D" uid="uid://c84sipkps4g7y" path="res://New Piskel-1.png (4)-1.png.png" id="4_klmx3"]
[ext_resource type="Texture2D" uid="uid://w6h0f55ikrn5" path="res://sprites/background sprites/BACKGROUND_stue50%.png" id="4_lejsb"]
[ext_resource type="Script" path="res://scripts/Pause menu button.gd" id="4_yl7dm"]
[ext_resource type="Texture2D" uid="uid://cs4xa3rxrdh0d" path="res://sprites/background sprites/BACKGROUND_stue25%.png" id="5_7d3j7"]
[ext_resource type="Texture2D" uid="uid://ca7toe6qmd1pe" path="res://New Piskel-2.png (4).png" id="5_jgjbg"]
[ext_resource type="Texture2D" uid="uid://dxaw24gy3e1i1" path="res://sprites/background sprites/BACKGROUND_stue0%.png" id="6_11l1f"]
[ext_resource type="Texture2D" uid="uid://b7mtwid5ab5ef" path="res://New Piskel-1.png (1).png" id="8_asfl0"]
[ext_resource type="Texture2D" uid="uid://dmi7054j3j2eo" path="res://New Piskel-1.png (4).png" id="8_oy7nv"]
[ext_resource type="Texture2D" uid="uid://bbd5rf2j6ddl4" path="res://New Piskel-2.png (1).png" id="9_nyyp1"]
[ext_resource type="Texture2D" uid="uid://1bml7tyu7oc0" path="res://New Piskel-1.png (2).png" id="10_w8j5b"]
[ext_resource type="Texture2D" uid="uid://tog215jfimeq" path="res://New Piskel-2.png (2).png" id="11_a2x4b"]
[ext_resource type="Texture2D" uid="uid://db7m5rbnr8isx" path="res://New Piskel-1.png (3).png" id="12_b2foc"]
[ext_resource type="Texture2D" uid="uid://b7kligycqvsjl" path="res://New Piskel-2.png (3).png" id="13_6ys2a"]
[ext_resource type="Texture2D" uid="uid://cibgby2mib1hh" path="res://New Piskel-1.png.png" id="14_bslfx"]
[ext_resource type="Texture2D" uid="uid://dps5ngaycy4uc" path="res://New Piskel-2.png.png" id="15_4eyjr"]
[ext_resource type="Texture2D" uid="uid://degf1fg7eq6hk" path="res://sprites/Health.png" id="16_4gpcf"]
[ext_resource type="Texture2D" uid="uid://lwb7d1j1hweo" path="res://New Piskel-1.png (4)-2.png.png" id="16_ltjbg"]
[ext_resource type="Script" path="res://scripts/Healthbar.gd" id="17_p0cqq"]
[ext_resource type="Script" path="res://scripts/ColonyInfo.gd" id="20_2nwra"]
[ext_resource type="FontFile" uid="uid://dojxg0x4imlua" path="res://sprites/fonts/Minecraft.ttf" id="21_tcjlp"]
[ext_resource type="PackedScene" uid="uid://tu4wbcgyarvw" path="res://scenes/CancerColony.tscn" id="22_7eyt3"]
[ext_resource type="Script" path="res://scripts/EconomyHandler.gd" id="25_jl0ia"]
[ext_resource type="PackedScene" uid="uid://byfliyn7lox7r" path="res://scenes/menus/upgradetree_menu.tscn" id="25_r5fj5"]
[ext_resource type="PackedScene" uid="uid://ia2lerpknwdq" path="res://scenes/menus/pause_menu.tscn" id="26_15dxr"]
[ext_resource type="PackedScene" uid="uid://bu5yqconeo332" path="res://scenes/menus/start_menu.tscn" id="27_f7wyd"]
[ext_resource type="PackedScene" uid="uid://bypc7yfbr5hu" path="res://scenes/menus/settings_menu.tscn" id="27_jyjyq"]

[sub_resource type="SpriteFrames" id="SpriteFrames_2bgar"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_bil64")
}, {
"duration": 1.0,
"texture": ExtResource("3_8do6h")
}, {
"duration": 1.0,
"texture": ExtResource("4_lejsb")
}, {
"duration": 1.0,
"texture": ExtResource("5_7d3j7")
}, {
"duration": 1.0,
"texture": ExtResource("6_11l1f")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="MainScene" type="Node2D"]
position = Vector2(-1, -1)

[node name="UiHandler" type="Node" parent="."]
editor_description = "En Wrapper rundt om nogle statemachine funktioner der skal kaldes af UI. SÃ¥ man kan finde dem i editoren "
script = ExtResource("1_hbd8v")

[node name="Background_Stue" type="AnimatedSprite2D" parent="UiHandler"]
sprite_frames = SubResource("SpriteFrames_2bgar")
offset = Vector2(160, 90)

[node name="TorsoAnatomy" type="Sprite2D" parent="UiHandler"]
texture = ExtResource("3_fka0q")
offset = Vector2(160, 90)

[node name="Pause menu button" type="TextureButton" parent="UiHandler"]
offset_left = 5.0
offset_top = 2.0
offset_right = 33.0
offset_bottom = 18.0
texture_normal = ExtResource("8_oy7nv")
texture_pressed = ExtResource("5_jgjbg")
stretch_mode = 3
script = ExtResource("4_yl7dm")

[node name="1x button" type="TextureButton" parent="UiHandler"]
offset_left = 259.0
offset_top = 2.0
offset_right = 275.0
offset_bottom = 18.0
toggle_mode = true
button_group = ExtResource("2_sj08s")
texture_normal = ExtResource("8_asfl0")
texture_pressed = ExtResource("9_nyyp1")
stretch_mode = 3

[node name="5x button" type="TextureButton" parent="UiHandler"]
offset_left = 279.0
offset_top = 2.0
offset_right = 295.0
offset_bottom = 18.0
toggle_mode = true
button_group = ExtResource("2_sj08s")
texture_normal = ExtResource("10_w8j5b")
texture_pressed = ExtResource("11_a2x4b")
stretch_mode = 3

[node name="10x button" type="TextureButton" parent="UiHandler"]
offset_left = 299.0
offset_top = 2.0
offset_right = 315.0
offset_bottom = 18.0
toggle_mode = true
button_group = ExtResource("2_sj08s")
texture_normal = ExtResource("12_b2foc")
texture_pressed = ExtResource("13_6ys2a")
stretch_mode = 5

[node name="Pause button" type="TextureButton" parent="UiHandler"]
offset_left = 239.0
offset_top = 2.0
offset_right = 255.0
offset_bottom = 18.0
toggle_mode = true
button_pressed = true
button_group = ExtResource("2_sj08s")
texture_normal = ExtResource("14_bslfx")
texture_pressed = ExtResource("15_4eyjr")
stretch_mode = 3

[node name="Upgrade" type="TextureButton" parent="UiHandler"]
offset_left = 5.0
offset_top = 20.0
offset_right = 43.0
offset_bottom = 36.0
texture_normal = ExtResource("4_klmx3")
texture_pressed = ExtResource("16_ltjbg")
stretch_mode = 3

[node name="Health" type="Node2D" parent="UiHandler"]
position = Vector2(-1, -1)

[node name="Healthbar" type="Sprite2D" parent="UiHandler/Health"]
position = Vector2(6, 172)
scale = Vector2(0.499197, 0.0437501)
texture = ExtResource("16_4gpcf")
centered = false
offset = Vector2(-80, 0)
script = ExtResource("17_p0cqq")

[node name="ColonyInfo" type="ColorRect" parent="UiHandler"]
visible = false
offset_left = 63.0
offset_top = 67.0
offset_right = 137.0
offset_bottom = 102.0
color = Color(0.121569, 0.121569, 0.121569, 1)
script = ExtResource("20_2nwra")

[node name="ColonyName" type="Label" parent="UiHandler/ColonyInfo"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 3.0
offset_right = -3.0
offset_bottom = -3.0
theme_override_fonts/font = ExtResource("21_tcjlp")
theme_override_font_sizes/font_size = 5

[node name="ColonyInformation" type="Label" parent="UiHandler/ColonyInfo/ColonyName"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.254
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 0.0140004
theme_override_fonts/font = ExtResource("21_tcjlp")
theme_override_font_sizes/font_size = 3

[node name="Colonies" type="Node" parent="UiHandler"]

[node name="Heart" type="Node" parent="UiHandler/Colonies"]

[node name="Heart1" parent="UiHandler/Colonies/Heart" instance=ExtResource("22_7eyt3")]
visible = false

[node name="Heart2" parent="UiHandler/Colonies/Heart" instance=ExtResource("22_7eyt3")]
visible = false

[node name="Lungs" type="Node" parent="UiHandler/Colonies"]

[node name="Lung1" parent="UiHandler/Colonies/Lungs" instance=ExtResource("22_7eyt3")]
visible = false
organ = 1

[node name="Lung2" parent="UiHandler/Colonies/Lungs" instance=ExtResource("22_7eyt3")]
visible = false
organ = 1

[node name="Lung3" parent="UiHandler/Colonies/Lungs" instance=ExtResource("22_7eyt3")]
visible = false
organ = 1

[node name="Liver" type="Node" parent="UiHandler/Colonies"]

[node name="Liver1" parent="UiHandler/Colonies/Liver" instance=ExtResource("22_7eyt3")]
visible = false
organ = 2

[node name="Liver2" parent="UiHandler/Colonies/Liver" instance=ExtResource("22_7eyt3")]
visible = false
organ = 2

[node name="Intestines" type="Node" parent="UiHandler/Colonies"]

[node name="Intestines1" parent="UiHandler/Colonies/Intestines" instance=ExtResource("22_7eyt3")]
visible = false
organ = 3

[node name="Intestines2" parent="UiHandler/Colonies/Intestines" instance=ExtResource("22_7eyt3")]
visible = false
organ = 3

[node name="Intestines3" parent="UiHandler/Colonies/Intestines" instance=ExtResource("22_7eyt3")]
visible = false
organ = 3

[node name="Brain" type="Node" parent="UiHandler/Colonies"]

[node name="brain1" parent="UiHandler/Colonies/Brain" instance=ExtResource("22_7eyt3")]
visible = false

[node name="brain2" parent="UiHandler/Colonies/Brain" instance=ExtResource("22_7eyt3")]
visible = false

[node name="brain3" parent="UiHandler/Colonies/Brain" instance=ExtResource("22_7eyt3")]
visible = false

[node name="CancerPoints" type="Label" parent="UiHandler"]
offset_left = 6.0
offset_top = 162.0
offset_right = 55.0
offset_bottom = 172.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 1
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("21_tcjlp")
theme_override_font_sizes/font_size = 6
text = "Cancer Points: 0"
script = ExtResource("25_jl0ia")

[node name="UpgradeMenu" parent="UiHandler" instance=ExtResource("25_r5fj5")]
visible = false

[node name="PauseMenu" parent="UiHandler" instance=ExtResource("26_15dxr")]
visible = false

[node name="StartMenu" parent="UiHandler" instance=ExtResource("27_f7wyd")]
visible = false

[node name="SettingsMenu" parent="UiHandler" instance=ExtResource("27_jyjyq")]
visible = false

[connection signal="pressed" from="UiHandler/Pause menu button" to="UiHandler" method="_on_pause_menu_button_pressed"]
[connection signal="pressed" from="UiHandler/1x button" to="UiHandler" method="ChangeDaySpeed" binds= [1.0]]
[connection signal="pressed" from="UiHandler/5x button" to="UiHandler" method="ChangeDaySpeed" binds= [5.0]]
[connection signal="pressed" from="UiHandler/10x button" to="UiHandler" method="ChangeDaySpeed" binds= [10.0]]
[connection signal="pressed" from="UiHandler/Pause button" to="UiHandler" method="StopDayCycle"]
[connection signal="pressed" from="UiHandler/Upgrade" to="UiHandler" method="_on_upgrade_pressed"]
